# fast_api_beyond_crud

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
db/: main.py
samples/: sample.env
src/: __init__.py  config.py
src/books/: book_data.py  routes.py  schemas.py
test/: test_books.py
